refactor: optimize imports and optimize code