@@ -12,28 +12,27 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 
 @ControllerAdvice
 public class CustomErrorController {
 
     @ExceptionHandler
-    ResponseEntity handleIllegalArgumentExceptions(IllegalArgumentException exception){
+    ResponseEntity<String> handleIllegalArgumentExceptions(IllegalArgumentException exception){
         return ResponseEntity.badRequest().body(exception.getMessage());
     }
 
     @ExceptionHandler
-    ResponseEntity handleJPAViolations(TransactionSystemException exception) {
+    ResponseEntity<List<Map<String, String>>> handleJPAViolations(TransactionSystemException exception) {
         ResponseEntity.BodyBuilder responseEntity = ResponseEntity.badRequest();
 
         if (exception.getCause().getCause() instanceof ConstraintViolationException ve) {
-            List errors = ve.getConstraintViolations().stream()
+            List<Map<String, String>> errors = ve.getConstraintViolations().stream()
                     .map(constraintViolation -> {
                         Map<String, String> errorMap = new HashMap<>();
                         errorMap.put(constraintViolation.getPropertyPath().toString(), constraintViolation.getMessage());
                         return errorMap;
-                    }).collect(Collectors.toList());
+                    }).toList();
             return responseEntity.body(errors);
         }
 
@@ -41,20 +40,20 @@ public class CustomErrorController {
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    ResponseEntity handleBindErrors(MethodArgumentNotValidException exception) {
+    ResponseEntity<List<Map<String, String>>> handleBindErrors(MethodArgumentNotValidException exception) {
 
-        List errorList = exception.getFieldErrors().stream()
+        List<Map<String, String>> errorList = exception.getFieldErrors().stream()
                 .map(fieldError -> {
                     Map<String, String> errorMap = new HashMap<>();
                     errorMap.put(fieldError.getField(), fieldError.getDefaultMessage());
                     return errorMap;
-                }).collect(Collectors.toList());
+                }).toList();
 
         return ResponseEntity.badRequest().body(errorList);
     }
 
     @ExceptionHandler(BadCredentialsException.class)
-    ResponseEntity handleBindErrors(BadCredentialsException exception) {
+    ResponseEntity<String> handleBindErrors(BadCredentialsException exception) {
 
         String errorMessage = exception.getMessage();
 
